<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.fixmycar.OrderActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="fill_parent">
    <TextView
        android:text="@string/order_car_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:id="@+id/order_car_model"/>
    <TextView
            android:text="@string/order_car_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:textStyle="bold"
            android:id="@+id/order_car_desc"/>
    <TextView
            android:text="@string/order_car_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:textStyle="bold"
            />
        <ImageView
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:scaleType="fitCenter"
            android:layout_marginTop="10dp"
            android:id="@+id/order_car_image"/>
        <TextView
            android:text="@string/order_shop_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:id="@+id/order_shop_name"/>

        <TextView
            android:text="@string/order_repair_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="#ff0033"
            android:id="@+id/order_repair_price"/>
        <TextView
            android:text="@string/order_repair_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="#0000CD"
            android:id="@+id/order_repair_desc"/>
        <TextView
            android:text="@string/order_repair_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:id="@+id/order_repair_items"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:id="@+id/order_confirm"
            android:textColor="#FFFFFF"
            android:background="#339966"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/order_confirm"/>
    </LinearLayout>
</LinearLayout>
