<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:id="@+id/shop_detail_name"/>
        <ImageView
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/shop_detail_image"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:background="@color/background_material_light"
        android:layout_height="20dp">

        </LinearLayout>
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1">
        <TableRow android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:gravity="center"
                android:text="@string/shop_detail_addr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:gravity="center"
                android:id="@+id/shop_detail_addr"
                android:layout_width="wrap_content" />
        </TableRow>
        <TableRow>
            <TextView
                android:gravity="center"
                android:text="@string/shop_detail_adv" />
            <TextView
                android:gravity="center"
                android:text="@string/shop_detail_adv_value"
                android:id="@+id/shop_detail_adv"/>
        </TableRow>
        <TableRow>
            <TextView
                android:gravity="center"
                android:text="@string/shop_detail_workinghour" />
            <TextView
                android:gravity="center"
                android:text="@string/shop_detail_workinghour_value" />

        </TableRow>
        <TableRow>
            <TextView
                android:gravity="center"
                android:text="@string/shop_detail_carmode"/>
            <TextView
                android:gravity="center"
                android:text="@string/shop_detail_carmode_value" />

        </TableRow>
        <TableRow>
            <TextView
                android:gravity="center"
                android:text="@string/shop_detail_phone"/>
            <TextView
                android:gravity="center"
                android:id="@+id/shop_detail_phone" />
        </TableRow>


    </TableLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">
        <ImageButton
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/phone_call"
            android:layout_marginLeft="70dp"
            android:scaleType="fitCenter"
            android:src="@drawable/phone_call" />
        <ImageButton
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/take_order"
            android:layout_marginLeft="30dp"
            android:scaleType="fitCenter"
            android:src="@drawable/order" />


    </LinearLayout>

</LinearLayout>
