<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/background_floating_material_light">




    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:src="@drawable/choose_car"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/car_mode"
            android:textSize="15sp"
            android:textStyle="bold"
            android:id="@+id/txt_car_mode" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <Spinner
            android:id="@+id/spin_car_mode"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold"
            android:entries="@array/car_mode_arrays"
             />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_marginTop="5dp"
        android:layout_height="1dp"
        android:background="#000000">
        </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:src="@drawable/damage_desc"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/car_desc"
            android:id="@+id/txt_car_desc" />
    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="#FFFFFF"
            android:layout_marginTop="5dp"
            android:maxLines="3"
            android:text="@string/car_damage_hint"
            android:id="@+id/edt_car_desc"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_weight="1"
            />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/current_location"
        android:id="@+id/car_location"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#000000"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:src="@drawable/damage"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"

            android:layout_marginLeft="10dp"

            android:text="@string/car_image"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                android:layout_width="120dp"
                android:layout_marginTop="20sp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_height="50dp"
                android:text="@string/take_photo"
                android:id="@+id/btn_take_photo" />
                <Button
                    android:layout_marginTop="20sp"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:text="@string/choose_photo"
                 android:id="@+id/btn_choose_photo" />
            </LinearLayout>
            <ImageView

                android:layout_width="fill_parent"
                android:layout_marginLeft="10dp"
                android:layout_height="150dp"
                android:id="@+id/imv_car_photo" />
        </LinearLayout>

    </LinearLayout>




    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/submit"
            android:id="@+id/btn_submit"
            android:textColor="#FFFFFF"
            android:background="#339966"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center"
            />

    </LinearLayout>
</LinearLayout>
